# openPMD-beamphysics

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  COMPLETION_SUMMARY.txt  COMPLIANCE_CHECK_COMPLETE.md  CONVERSION_COMPLETE.md  CONVERSION_UPDATE_COMPLETE.md  DOCUMENTATION_INDEX.md  MANIFEST.in  NEW_FILES_CONVERSION_REPORT.md  OPTICS_CONVERSION_REPORT.md  PROJECT_STRUCTURE_CHANGES.md  PR_NOTES.md  QUICKREF_CONVERSION.md  QUICKSTART_NEW_FILES.md  README.md  SUMMARY.txt  XSUITE_CONVERSION_STATUS.md  check_compliance.py  convert_xsuite_inputs.py  enhance_openpmd_metadata.py  environment.yml  index.html  index.md  inspect_fccee_h_thick.py  inspect_outputs.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_full_conversion.py  setup.cfg  setup.py  sitemap.xml
.github/: FUNDING.yml
beamphysics/: __init__.py  labels.py  particles.py  plot.py  plot_base.py  plot_bokeh.py  plot_dispatch.py  readers.py  species.py  statistics.py  status.py  testing.py  units.py  utils.py  writers.py
docs/: index.md  particle_examples.ipynb  plot_examples.ipynb  statistics_schema.md
examples/: field_examples.ipynb  field_tracking.ipynb  labels.ipynb  normalized_coordinates.ipynb  openpmd_particles.h5  particle_examples.ipynb  plot_examples.ipynb  read_examples.ipynb  units.ipynb  write_examples.ipynb
opmd_beamphysics/: bunch_plotting.py  bunch_stats.py  bunch_tools.py  particles.py  units.py
particle_examples/: index.html
pmd_beamphysics/: __init__.py  _version.py  fields.py  labels.py  metadata.py  particles.py  plot.py  readers.py  species.py  (+9 more)
(+256 files in other folders)
